Modularization for Native Package