@@ -6,7 +6,15 @@ apply plugin: 'java'
 
 apply plugin: 'com.github.johnrengelman.shadow'
 
-sourceCompatibility = 1.8
+ext {
+    moduleName = 'ps.ProcelioServer'
+    mainClassName = 'procul.studios.ProcelioServer'
+}
+
+compileJava {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+}
 
 repositories {
     mavenCentral()
@@ -22,14 +30,17 @@ dependencies {
     //Logging
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
+    //POJOs
+    compile project(":ProcelioCommon")
+
     //Database access and JDBC Driver
-    compile group: 'org.jooq', name: 'jooq', version: '3.10.1'
-    compile group: 'org.jooq', name: 'jooq-meta', version: '3.10.1'
-    compile group: 'org.jooq', name: 'jooq-codegen', version: '3.10.1'
+    compile group: 'org.jooq', name: 'jooq', version: '3.10.7'
+    compile group: 'org.jooq', name: 'jooq-meta', version: '3.10.7'
+    compile group: 'org.jooq', name: 'jooq-codegen', version: '3.10.7'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.20.1'
 
     //JSON Parsing
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
     //Hashing Library
     compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
@@ -49,14 +60,18 @@ buildscript {
     dependencies { classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1' }
 }
 
+task execute(type:JavaExec) {
+    main = mainClassName
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = ['--add-modules', 'java.xml.bind']
+}
+
 shadowJar {
     baseName = 'ProcelioServer'
     classifier = null
     version = null
-}
 
-jar {
     manifest {
-        attributes 'Main-Class': 'procul.studios.ProcelioServer'
+        attributes 'Main-Class': mainClassName
     }
 }
